# ChessRust

./: Cargo.toml  index.html
src/: lib.rs  main.rs
src/components/: board.rs  mod.rs
src/logic/: board.rs  domain.rs  game.rs  mod.rs
src/logic/rules/: bishop_rules.rs  check_mate_rules.rs  king_rules.rs  knight_and_king_rules.rs  knight_rules.rs  mod.rs  multi_tile_rules.rs  pawn_rules.rs  queen_rules.rs  rook_rules.rs  rules.rs
tests/: board_tests.rs  mod.rs
tests/logic/: bishop_rules.rs  check_and_mate_rules.rs  king_rules.rs  knight_rules.rs  mod.rs  pawn_rules.rs  queen_rules.rs  rook_rules.rs
