[package]
name = "chessTUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "chessTUI"

[dependencies]

serde = "1.0.115"
serde-aux = "3"
serde_json = "1"
[dev-dependencies]

serde_json = "1.0.61"
