[package]
name = "chessTUI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[dependencies]

serde = "1.0.115"
serde-aux = "3"
serde_json = "1"
derive-try-from-primitive = "1.0.0"
gloo = "0.4"
lazy_static = "1.4.0"
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "Node",
    "Window",
    "HtmlCollection",
    "HtmlInputElement",
]

[dev-dependencies]
serde_json = "1.0.61"
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
gloo-utils = "0.1.0"
